2018/2018-04/2018-04-09/source/set10/970x250.css
/* ... */
/*-- slide in right --*/
@-webkit-keyframes slideInRight {
  0%   {
    visibility: visible;
    -webkit-transform: translate(-100%,0);
  }
  100% { 
    visibility: visible;
    -webkit-transform: translate(0,0);
  }
}
@-moz-keyframes slideInRight {
  0%   {
    visibility: visible;
    -moz-transform: translate(-100%,0);
  }
  100% { 
    visibility: visible;
    -moz-transform: translate(0,0);
  }
}
@keyframes slideInRight {
  0%   {
    visibility: visible;
    transform: translate(-100%,0);
  }
  100% { 
    visibility: visible;
    transform: translate(0,0);
  }
}

/*-- slide in left --*/
@-webkit-keyframes slideInLeft {
  0%   {
    visibility: visible;
    -webkit-transform: translate(100%,0);
  }
  100% { 
    visibility: visible;
    -webkit-transform: translate(0,0);
  }
}
@-moz-keyframes slideInLeft {
  0%   {
    visibility: visible;
    -moz-transform: translate(100%,0);
  }
  100% { 
    visibility: visible;
    -moz-transform: translate(0,0);
  }
}
@keyframes slideInLeft {
  0%   {
    visibility: visible;
    transform: translate(100%,0);
  }
  100% { 
    visibility: visible;
    transform: translate(0,0);
  }
}

/*-- show bg --*/
@-webkit-keyframes showBackground {
  0%   {
    -webkit-transform: translate(0, 250px);
  }
  100% { 
    -webkit-transform: translate(0, 250px);
  }
}
@-moz-keyframes showBackground {
  0%   {
    -moz-transform: translate(0, 250px);
  }
  100% { 
    -moz-transform: translate(0, 250px);
  }
}
@keyframes showBackground {
  0%   {
    transform: translate(0, 250px);
  }
  100% {
    transform: translate(0, 250px);
  }
}


/*-- slide up bg --*/
@-webkit-keyframes slideUpBackground {
  0%   {
    visibility: visible;
    -webkit-transform: translate(0, 0);
  }
  100% { 
    visibility: visible;
    -webkit-transform: translate(0, -250px);
  }
}
@-moz-keyframes slideUpBackground {
  0%   {
    visibility: visible;
    -moz-transform: translate(0, 0);
  }
  100% { 
    visibility: visible;
    -moz-transform: translate(0, -250px);
  }
}
@keyframes slideUpBackground {
  0%   {
    visibility: visible;
    transform: translate(0, 0);
  }
  100% { 
    visibility: visible;
    transform: translate(0, -250px);
  }
}

/*-------------------------------------------*/
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}

.absolute {
  position: absolute;
}

.container{
  position: absolute;
  top: 0px;
  left: 0px;
  width: 970px;
  height: 250px;
  display: block;
}

.banner-container{
  overflow: hidden;
  background-color: #ffffff;
}

.content-hide-ie {
  opacity: 0;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  z-index: 0;

  -webkit-animation: fadeInOnly 10ms ease-in-out 0s forwards;
  -moz-animation: fadeInOnly 10ms ease-in-out 0s forwards;
  animation: fadeInOnly 10ms ease-in-out 0s forwards;
}

.content-container{
  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
  animation: hideContent 10ms ease-in-out 0s forwards;
}

.content{
  background-color: #ffffff;
  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
  overflow: hidden;
}

.content-wrapper { 
  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
  animation: hideContent 10ms ease-in-out 0s forwards; 
}

.border {
  background: url('./images/970x250_border.png') no-repeat center center;
  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
}
.bg {
  background: url('./images/970x250_bg.jpg') no-repeat center center;
  width: 970px;
  height: 500px;
  top: -250px;
  left: 0px;

  -webkit-animation: showBackground 0.01s ease-in-out 0s forwards;
  -moz-animation: showBackground 0.01s ease-in-out 0s forwards;
  animation: showBackground 0.01s ease-in-out 0s forwards;
}
.bg-wrapper {
  -webkit-animation: showContent 0.5s ease-in-out 0.75s forwards;
  -moz-animation: showContent 0.5s ease-in-out 0.75s forwards;
  animation: showContent 0.5s ease-in-out 0.75s forwards;
}
.logo {
  background: url('./images/970x250_logo.png') no-repeat center center;
  width: 970px;
  height: 45px;
  bottom: 0px;
  right: 0px;

  -webkit-animation: fadeInUp 0.5s ease-in-out 0.5s forwards;
  -moz-animation: fadeInUp 0.5s ease-in-out 0.5s forwards;
  animation: fadeInUp 0.5s ease-in-out 0.5s forwards;
}
.text {
  background: url('./images/970x250_text.png') no-repeat center center;
  width: 433px;
  height: 133px;
  top: 30px;
  left: 17px;

  -webkit-animation: fadeInRight100 0.75s ease-in-out 1.25s forwards;
  -moz-animation: fadeInRight100 0.75s ease-in-out 1.25s forwards;
  animation: fadeInRight100 0.75s ease-in-out 1.25s forwards;
}
.cta {
  background: url('./images/970x250_cta.png') no-repeat center center;
  width: 168px;
  height: 171px;
  top: 18px;
  right: 0px;

  -webkit-animation: fadeInLeft100 0.75s ease-in-out 2s forwards;
  -moz-animation: fadeInLeft100 0.75s ease-in-out 2s forwards;
  animation: fadeInLeft100 0.75s ease-in-out 2s forwards;
}
.text-container {
  -webkit-animation: fadeOut 0.75s ease-in-out 3.75s forwards;
  -moz-animation: fadeOut 0.75s ease-in-out 3.75s forwards;
  animation: fadeOut 0.75s ease-in-out 3.75s forwards;
}
.bg-container {
  -webkit-animation: slideUpBackground 1.5s ease-in-out 3.75s forwards;
  -moz-animation: slideUpBackground 1.5s ease-in-out 3.75s forwards;
  animation: slideUpBackground 1.5s ease-in-out 3.75s forwards;
}

